what we do done

--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
               <div class="items">
                 <div class="left">
                   <picture
-                    ><img src="images/Group 1000006903.png" alt="images/Group 1000006903.png"
+                    ><img
+                      src="images/Group 1000006903.png"
+                      alt="images/Group 1000006903.png"
                   /></picture>
                 </div>
                 <div class="right">
@@ -232,7 +234,9 @@
               <div class="items">
                 <div class="left">
                   <picture
-                    ><img src="images/Group 1000006903.png" alt="images/Group 1000006903.png"
+                    ><img
+                      src="images/Group 1000006903.png"
+                      alt="images/Group 1000006903.png"
                   /></picture>
                 </div>
                 <div class="right">
@@ -244,7 +248,9 @@
               <div class="items">
                 <div class="left">
                   <picture
-                    ><img src="images/Group 1000006903.png" alt="images/Group 1000006903.png"
+                    ><img
+                      src="images/Group 1000006903.png"
+                      alt="images/Group 1000006903.png"
                   /></picture>
                 </div>
                 <div class="right">
@@ -257,7 +263,9 @@
               <div class="items">
                 <div class="left">
                   <picture
-                    ><img src="images/Group 1000006903.png" alt="images/Group 1000006903.png"
+                    ><img
+                      src="images/Group 1000006903.png"
+                      alt="images/Group 1000006903.png"
                   /></picture>
                 </div>
                 <div class="right">
@@ -281,6 +289,97 @@
         </div>
       </section>
       <!-- Why us Section -->
+      <!-- What We Do Section -->
+      <section id="we_do">
+        <div class="section_container">
+          <div class="we_do_container">
+            <div class="we_do_summary">
+              <h2>What We Do</h2>
+              <p>
+                We are now a team of strategists, engineers, designers, and
+                marketers who both use and develop technology
+              </p>
+              <a href="#"><button class="btn">Contact Us</button></a>
+            </div>
+            <div class="we_do_cards">
+              <picture
+                ><img src="images/Wedo1.png" alt="images/Wedo1.png"
+              /></picture>
+              <div class="weDoCard_contant">
+                <h3>web Design & Dev</h3>
+                <p>
+                  Social Media has changed the way we interact & do business
+                  while creating
+                </p>
+                <a href="#"
+                  ><button>Read More<span></span></button
+                ></a>
+              </div>
+            </div>
+            <div class="we_do_cards">
+              <picture
+                ><img src="images/Wedo2.png" alt="images/Wedo2.png"
+              /></picture>
+              <div class="weDoCard_contant">
+                <h3>Software Dev</h3>
+                <p>
+                  Content Marketing is the other fold of online advertisement.
+                  If you are looking to build
+                </p>
+                <a href="#"
+                  ><button>Read More<span></span></button
+                ></a>
+              </div>
+            </div>
+            <div class="we_do_cards">
+              <picture
+                ><img src="images/Wedo3.png" alt="images/Wedo3.png"
+              /></picture>
+              <div class="weDoCard_contant">
+                <h3>Content Writing</h3>
+                <p>
+                  Social Media has changed the way we interact & do business
+                  while creating a new avenue.
+                </p>
+                <a href="#"
+                  ><button>Read More<span></span></button
+                ></a>
+              </div>
+            </div>
+            <div class="we_do_cards">
+              <picture
+                ><img src="images/Wedo4.png" alt="images/Wedo4.png"
+              /></picture>
+              <div class="weDoCard_contant">
+                <h3>Digital Marketing</h3>
+                <p>
+                  Social Media has changed the way we interact & do business
+                  while creating a new avenue.
+                </p>
+                <a href="#"
+                  ><button>Read More<span></span></button
+                ></a>
+              </div>
+            </div>
+            <div class="we_do_cards">
+              <picture
+                ><img src="images/Wedo5.png" alt="images/Wedo5.png"
+              /></picture>
+              <div class="weDoCard_contant">
+                <h3>Support & Training</h3>
+                <p>
+                  Content Marketing is the other fold of online advertisement.
+                  If you are looking to build
+                </p>
+                <a href="#"
+                  ><button>Read More<span></span></button
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- What We Do Section -->
     </main>
   </body>
 </html>
