right plan section done

--- a/index.html
+++ b/index.html
@@ -380,6 +380,149 @@
         </div>
       </section>
       <!-- What We Do Section -->
+
+      <!-- Real Impact Section -->
+      <section id="realImpact">
+        <div class="section_container">
+          <div class="section_title">
+            <h2>We create real impact</h2>
+            <p>
+              We design, build and support websites and apps for clients
+              worldwide. Create beautiful, eye-catching on-page messages without
+              the need for a developer.
+            </p>
+          </div>
+          <div class="realImpactContainer">
+            <div class="left">
+              <div class="contant">
+                <img src="images/icon.png" alt="images/icon.png" />
+                <div class="summary">
+                  <h3>Competitive Analysis</h3>
+                  <p>
+                    With an all-new look and powerful features, Ekko is the best
+                    way to ensure success for your business.
+                  </p>
+                </div>
+              </div>
+              <div class="contant">
+                <img src="images/icon2.png" alt="images/icon.png" />
+                <div class="summary">
+                  <h3>Strategy And research</h3>
+                  <p>
+                    Save money and start building your website using the best
+                    tools available on the market today.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="right">
+              <div class="realImapactImges1">
+                <picture
+                  ><img src="images/boxImg1.jpg" alt="images/boxImg1.jpg"
+                /></picture>
+              </div>
+              <div class="realImapactImges2">
+                <picture
+                  ><img src="images/boxImg2.jpg" alt="images/boxImg2.jpg"
+                /></picture>
+              </div>
+              <div class="realImapactImges3">
+                <picture
+                  ><img src="images/boxImg3.jpg" alt="images/boxImg3.jpg"
+                /></picture>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Real Impact Section -->
+
+      <!-- Choose Right plan section -->
+      <section id="rightPlan">
+        <h2>Choose The Right Plan</h2>
+        <div class="section_container">
+          <div class="rightPlanContainer">
+            <div class="rightPlanCard">
+              <h4>Basic</h4>
+              <picture
+                ><img src="images/PLAN2.png" alt="images/PLAN2.png"
+              /></picture>
+              <div class="contant">
+                <div class="price">
+                  <sup>$</sup>
+                  <h3>160</h3>
+                </div>
+                <p>
+                  Responsive Design Dynamic Elements Service Pages Custom Design
+                  & Features
+                </p>
+              </div>
+            </div>
+            <div class="rightPlanCard">
+              <h4>Professional</h4>
+              <picture
+                ><img src="images/PLAN1.png" alt="images/PLAN1.png"
+              /></picture>
+              <div class="contant">
+                <div class="price">
+                  <sup>$</sup>
+                  <h3>240</h3>
+                </div>
+                <p>
+                  Responsive Design Dynamic Elements Service Pages Custom Design
+                  & Features
+                </p>
+              </div>
+            </div>
+            <div class="rightPlanCard">
+              <h4>Exclusive</h4>
+              <picture
+                ><img src="images/PLAN3.png" alt="images/PLAN3.png"
+              /></picture>
+              <div class="contant">
+                <div class="price">
+                  <sup>$</sup>
+                  <h3>325</h3>
+                </div>
+                <p>
+                  Responsive Design Dynamic Elements Service Pages Custom Design
+                  & Features
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Choose Right plan section -->
+
+      <!-- About us section -->
+      <section id="about_us">
+        <h2>What The people Thinks About Us</h2>
+        <div class="section_container">
+          <div class="aboutUsContainer">
+            <picture
+              ><img
+                src="images/Picsart_23-06-06_00-16-09-053.jpg"
+                alt="Picsart_23-06-06_00-16-09-053.jpg"
+            /></picture>
+            <span
+              ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+            ></span>
+            <p>
+              Lesser Replenish bearing they’re him cattle kind dominion. You
+              which fill place. Land she’d subdue divided gathering blessed
+              seasons it. Without, wherein days.
+            </p>
+            <div class="details">
+              <h4>MD. Nurislam</h4>
+              <p>Ceo And Head Of Idea</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- About us section -->
     </main>
   </body>
 </html>
