--- a/index.html
+++ b/index.html
@@ -510,6 +510,12 @@
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i
             ></span>
+            <div class="rightbutton">
+              <span><i class="fa-solid fa-greater-than"></i></span>
+            </div>
+            <div class="leftbutton">
+              <span><i class="fa-solid fa-less-than"></i></span>
+            </div>
             <p>
               Lesser Replenish bearing they’re him cattle kind dominion. You
               which fill place. Land she’d subdue divided gathering blessed
@@ -523,6 +529,132 @@
         </div>
       </section>
       <!-- About us section -->
+
+      <!-- You May Also like Section -->
+      <section id="alsoLike">
+        <div class="section_container">
+          <h2>You May Also Like</h2>
+          <div class="alsoLikeSection">
+            <div class="alsoLikeContainer">
+              <div class="imgContainer">
+                <picture
+                  ><img src="images/boxImg1.jpg" alt="images/boxImg1"
+                /></picture>
+              </div>
+              <div class="summery">
+                <div class="summeryHeader">
+                  <p>News</p>
+                  <p>By Tomas Nilkelson</p>
+                  <p>Posted</p>
+                  <p>5 Hours Ago</p>
+                </div>
+                <div class="summeryMain">
+                  <h3>
+                    Punto Pago Allows Quick And Secure Payments For Services In
+                    Panama
+                  </h3>
+                </div>
+                <div class="summery_btn">
+                  <a href="#"
+                    ><button>Read More<span></span></button
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="alsoLikeContainer">
+              <div class="imgContainer">
+                <picture
+                  ><img src="images/boxImg2.jpg" alt="images/boxImg2"
+                /></picture>
+              </div>
+              <div class="summery">
+                <div class="summeryHeader">
+                  <p>News</p>
+                  <p>By Tomas Nilkelson</p>
+                  <p>Posted</p>
+                  <p>5 Hours Ago</p>
+                </div>
+                <div class="summeryMain">
+                  <h3>
+                    The User Can Also Replenish A Balance Make Remittances
+                  </h3>
+                </div>
+                <div class="summery_btn">
+                  <a href="#"
+                    ><button>Read More<span></span></button
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="alsoLikeContainer">
+              <div class="imgContainer">
+                <picture
+                  ><img src="images/boxImg3.jpg" alt="images/boxImg3"
+                /></picture>
+              </div>
+              <div class="summery">
+                <div class="summeryHeader">
+                  <p>News</p>
+                  <p>By Tomas Nilkelson</p>
+                  <p>Posted</p>
+                  <p>5 Hours Ago</p>
+                </div>
+                <div class="summeryMain">
+                  <h3>
+                    Punto Pago Allows Quick And Secure Payments For Services In
+                    Panama
+                  </h3>
+                </div>
+                <div class="summery_btn">
+                  <a href="#"
+                    ><button>Read More<span></span></button
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- Footer Section -->
+    <footer>
+      <div class="section_container">
+        <div class="footerSection">
+          <div class="footerDiv footerWithLogo">
+            <picture
+              ><img src="images/Logo.png" alt="images/Logo.png"
+            /></picture>
+            <p>
+              Install any demo or template with a single click. You can mix and
+              match all the demos & templates. Every demo can be turned into one
+              or multi-page.
+            </p>
+          </div>
+          <div class="footerDiv">
+            <h4>Features</h4>
+            <a href="#">Home</a>
+            <a href="">About</a>
+            <a href="">Benifit</a>
+            <a href="">Pricing</a><a href="">Blog</a>
+          </div>
+          <div class="footerDiv">
+            <h4>Products</h4>
+            <a href="#">Task Management</a>
+            <a href="">Company Growth</a>
+            <a href="">Time Tracking</a>
+          </div>
+          <div class="footerDiv">
+            <h4>Support</h4>
+            <a href="#">Customer Service</a>
+            <a href="">Accessiblity</a>
+            <a href="">Contact Us</a>
+          </div>
+        </div>
+        <div class="footerSection_footer">
+          <a href="">@20201 Innovate.All rights reserved.</a
+          ><a href="">Privacy policy</a><a href="">Terms & condition</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
